shapekey messes up geometry node #86972

Closed
opened 2021-03-27 07:19:00 +01:00 by HF · 6 comments

System Information
Operating system: win 10
Graphics card: 2070 super

Blender Version
Broken: 2.93.0-9b87d3f02962

Short description of error
geometry node display bug when mesh have shape key

Exact steps for others to reproduce the error
1.adjust a node with shapekey and see it go crazy far away
WVJUypH0VT.mp4

geo bug.blend1

Ok, I've found out that the crazy movement seems to be caused by the transform node. when u do something with the transform node, things get crazy. if no transform node, everything is fine
p.s. animall addon won't work when animating mesh if the mesh has geometry nodes

**System Information** Operating system: win 10 Graphics card: 2070 super **Blender Version** Broken: 2.93.0-9b87d3f02962 **Short description of error** geometry node display bug when mesh have shape key **Exact steps for others to reproduce the error** 1.adjust a node with shapekey and see it go crazy far away [WVJUypH0VT.mp4](https://archive.blender.org/developer/F9911431/WVJUypH0VT.mp4) [geo bug.blend1](https://archive.blender.org/developer/F9911432/geo_bug.blend1) Ok, I've found out that the crazy movement seems to be caused by the transform node. when u do something with the transform node, things get crazy. if no transform node, everything is fine p.s. animall addon won't work when animating mesh if the mesh has geometry nodes
Author

Added subscriber: @Hongyu

Added subscriber: @Hongyu
HF changed title from shape messes up geometry node to shapekey messes up geometry node 2021-03-27 07:21:32 +01:00
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Thanks for the report.
In general, please don't add specific releases to reports yourself.

Thanks for the report. In general, please don't add specific releases to reports yourself.

This issue was referenced by 27fa2507a1

This issue was referenced by 27fa2507a15b37a57420ff9b900c9d4a15dd29c4
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Jacques Lucke self-assigned this 2021-03-29 09:35:56 +02:00
Thomas Dinges added this to the 2.93 LTS milestone 2023-02-07 18:46:14 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#86972
No description provided.