Fix T86972: transform node transforms shape keys